Fix scroll jump

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
   --header-height-desctop: 72px;
   --header-height-bobile: 63px;
+  --cubic-transition: 0.3s cubic-bezier(.2, .6, 0, 1);
   --transition: 0.3s ease-in-out;
   --black: #000000;
   --dark-grey: #444444;
@@ -53,6 +54,12 @@
 *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+*:focus {
+  -webkit-box-shadow: 0 0 0 0.15rem rgba(13, 85, 253, 0.2509803922);
+  box-shadow: 0 0 0 0.15rem rgba(13, 85, 253, 0.2509803922);
+  outline: 0;
 }
 
 html {
@@ -161,6 +168,7 @@ svg {
 }
 
 .dis-scroll {
+  position: fixed;
   left: 0;
   top: 0;
   overflow: hidden;
@@ -175,6 +183,7 @@ svg {
 }
 
 .site-btn-fill {
+  width: min(100%, 360px);
   background-color: var(--black);
   color: var(--white);
   padding: 15px 0;
@@ -184,6 +193,7 @@ svg {
   -webkit-transition: background-color var(--transition);
   -o-transition: background-color var(--transition);
   transition: background-color var(--transition);
+  margin: 0 auto;
 }
 .site-btn-fill:hover {
   background-color: var(--pepels-grey);
@@ -372,12 +382,25 @@ svg {
   }
 }
 
-.hidden-header {
+.headroom {
+  will-change: transform;
+  -webkit-transition: -webkit-transform var(--transition);
+  transition: -webkit-transform var(--transition);
+  -o-transition: transform var(--transition);
+  transition: transform var(--transition);
+  transition: transform var(--transition), -webkit-transform var(--transition);
+}
+
+.headroom--pinned {
+  -webkit-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  transform: translateY(0%);
+}
+
+.headroom--unpinned {
   -webkit-transform: translateY(-100%);
   -ms-transform: translateY(-100%);
   transform: translateY(-100%);
-  -webkit-box-shadow: unset;
-  box-shadow: unset;
 }
 
 .header-links__list {
@@ -865,8 +888,12 @@ svg {
 }
 @media (max-width: 576px) {
   .order__description {
-    width: 70%;
     padding-top: 36px;
+  }
+}
+@media (max-width: 375px) {
+  .order__description {
+    width: 13rem;
   }
 }
 
@@ -879,9 +906,15 @@ svg {
   }
 }
 
-.card__content {
-  border-top: 1px solid var(--middle-grey);
+.card {
   border-bottom: 1px solid var(--middle-grey);
+}
+
+.card:first-child {
+  border-top: 1px solid var(--middle-grey);
+}
+
+.card__content {
   padding: 26px 0;
   display: -ms-grid;
   display: grid;
@@ -958,7 +991,6 @@ svg {
 }
 
 .card__info {
-  margin-right: 16px;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
@@ -1356,11 +1388,16 @@ svg {
 
 .delete-dialog {
   padding: 25px 0;
+  border-bottom: 1px solid var(--middle-grey);
 }
 @media (max-width: 576px) {
   .delete-dialog {
     padding: 15px 0;
   }
+}
+
+.delete-dialog:first-child {
+  border-top: 1px solid var(--middle-grey);
 }
 
 .delete-dialog__content {
@@ -1738,6 +1775,10 @@ svg {
 
 .total {
   margin-top: -5px;
+  position: relative;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 @media (max-width: 1024px) {
   .total {
@@ -1921,14 +1962,16 @@ svg {
   width: 22px;
   height: 22px;
   left: -2px;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
   top: 50%;
-  background: var(--pepels-grey);
-  -webkit-transition: var(--transition);
-  -o-transition: var(--transition);
-  transition: var(--transition);
+  background-color: var(--pepels-grey);
+  -webkit-transition: background-color var(--transition), -webkit-transform var(--transition);
+  transition: background-color var(--transition), -webkit-transform var(--transition);
+  -o-transition: transform var(--transition), background-color var(--transition);
+  transition: transform var(--transition), background-color var(--transition);
+  transition: transform var(--transition), background-color var(--transition), -webkit-transform var(--transition);
   border-radius: 100%;
 }
 
@@ -1939,9 +1982,9 @@ svg {
 }
 
 .warehouse__input:checked + .custom-tumbler::after {
-  -webkit-transform: translateX(22px) translateY(-50%);
-  -ms-transform: translateX(22px) translateY(-50%);
-  transform: translateX(22px) translateY(-50%);
+  -webkit-transform: translate(22px, -50%);
+  -ms-transform: translate(22px, -50%);
+  transform: translate(22px, -50%);
   background-color: var(--black);
 }
 
@@ -2011,6 +2054,10 @@ svg {
   font-size: 16px;
   line-height: 21px;
   color: var(--pepels-grey);
+}
+
+.hidden {
+  display: none;
 }
 
 .map-wrapper {
@@ -2490,4 +2537,43 @@ svg {
 
 .modal-close {
   width: 100%;
+}
+
+.plug {
+  width: 100%;
+  height: 100%;
+  background-color: var(--light-grey);
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
+.plug button {
+  margin-top: 3rem;
+}
+.plug p {
+  font-weight: 400;
+  font-size: calc(24px + 4 * ((100vw - 320px) / 1600));
+  line-height: 30px;
+  color: var(--black);
+  text-align: center;
+  margin: 0;
+}
+
+.hidden {
+  display: none;
 }
